tests/test_data/custom-ingress-annotations-all/expected/networking.k8s.io/v1/Ingress/bucketrepo.yaml
# Source: jxboot-helmfile-resources/templates/700-bucketrepo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    beer: moretti-from-values
    cheese: edam-from-requirements
    kubernetes.io/ingress.class: bucketrepo-ingress-class
  name: bucketrepo
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: bucketrepo
            port:
              number: 80
    host: myrepo.com
  tls:
  - hosts:
    - myrepo.com
    secretName: "tls-mydomain-com-s"
